Add 'header > navbar > logo' -elements and content- on 'index.html'

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,19 @@
     <title>Test</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header class="container">
+      <nav class="navbar">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="../assets/media/tvm-header-logo-red.png"
+            width="50%"
+            height="50%"
+            class="navbar__logo d-inline-block align-top"
+            alt="tvmaze logo"
+          />
+        </a>
+      </nav>
+    </header>
     <script
       src="https://kit.fontawesome.com/5d25a44371.js"
       crossorigin="anonymous"
