Added items markup and content on navbar

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="container">
-      <nav class="navbar">
+      <nav class="navbar justify-content-start">
         <a class="navbar-brand" href="index.html">
           <img
             src="../assets/media/tvm-header-logo-red.png"
@@ -35,6 +35,11 @@
             alt="tvmaze logo"
           />
         </a>
+        <ul class="nav">
+          <li class="list-group-item active">Shows<span id="showsCounter"></span></li>
+          <li class="list-group-item ms-3">Movies</li>
+          <li class="list-group-item ms-3">Documentaries</li>
+        </ul>
       </nav>
     </header>
     <script
