--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,15 +28,15 @@
       <nav class="navbar justify-content-start">
         <a class="navbar-brand" href="index.html">
           <img
-            src="../assets/media/tvm-header-logo-red.png"
-            width="50%"
-            height="50%"
+            id="navbar-logo"
             class="navbar__logo d-inline-block align-top"
             alt="tvmaze logo"
           />
         </a>
         <ul class="nav">
-          <li class="list-group-item active">Shows<span id="showsCounter"></span></li>
+          <li class="list-group-item active">
+            Shows<span id="showsCounter"></span>
+          </li>
           <li class="list-group-item ms-3">Movies</li>
           <li class="list-group-item ms-3">Documentaries</li>
         </ul>
