Add 'footer' markup and content

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,6 +42,32 @@
         </ul>
       </nav>
     </header>
+    <footer class="">
+      <div class="container">
+        <span><i class="fa-regular fa-copyright"></i> Created by</span>
+        <ul class="">
+          <li class="">
+            <a
+              href="https://github.com/ITurres"
+              target="_blank"
+              rel="noopener noreferrer"
+              class=""
+              ><i class="fa-brands fa-github"></i>&nbsp;ITurres</a
+            >
+          </li>
+          <li class="">
+            <a
+              href="https://github.com/Ruthmy"
+              target="_blank"
+              rel="noopener noreferrer"
+              class=""
+            >
+              <i class="fa-brands fa-github"></i>&nbsp;Ruthmy</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/5d25a44371.js"
       crossorigin="anonymous"
