Added the necessary bootstrap classes in the index.html for styling the footer

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,30 +42,17 @@
         </ul>
       </nav>
     </header>
-    <footer class="">
+    <footer class="footer mt-auto py-3 bg-body-tertiary">
       <div class="container">
-        <span><i class="fa-regular fa-copyright"></i> Created by</span>
-        <ul class="">
-          <li class="">
-            <a
-              href="https://github.com/ITurres"
-              target="_blank"
-              rel="noopener noreferrer"
-              class=""
-              ><i class="fa-brands fa-github"></i>&nbsp;ITurres</a
-            >
-          </li>
-          <li class="">
-            <a
-              href="https://github.com/Ruthmy"
-              target="_blank"
-              rel="noopener noreferrer"
-              class=""
-            >
-              <i class="fa-brands fa-github"></i>&nbsp;Ruthmy</a
-            >
-          </li>
-        </ul>
+        <span class="text-body-secondary"><i class="fa-regular fa-copyright"></i> Created by
+          <a href="https://github.com/ITurres" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+            <i class="fa-brands fa-github m-1"></i>ITurres
+          </a>
+          &
+          <a href="https://github.com/Ruthmy" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+            <i class="fa-brands fa-github m-1"></i>Ruthmy
+          </a>
+        </span>
       </div>
     </footer>
     <script
