Add Bootstrap -required- 'jquery and Js' -scripts-

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,12 +44,23 @@
     </header>
     <footer class="footer mt-auto py-3 bg-body-tertiary">
       <div class="container">
-        <span class="text-body-secondary"><i class="fa-regular fa-copyright"></i> Created by
-          <a href="https://github.com/ITurres" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+        <span class="text-body-secondary"
+          ><i class="fa-regular fa-copyright"></i> Created by
+          <a
+            href="https://github.com/ITurres"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-decoration-none"
+          >
             <i class="fa-brands fa-github m-1"></i>ITurres
           </a>
           &
-          <a href="https://github.com/Ruthmy" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+          <a
+            href="https://github.com/Ruthmy"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="text-decoration-none"
+          >
             <i class="fa-brands fa-github m-1"></i>Ruthmy
           </a>
         </span>
@@ -59,5 +70,7 @@
       src="https://kit.fontawesome.com/5d25a44371.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
