--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,8 +35,8 @@
           />
         </a>
         <ul class="nav">
-          <li class="list-group-item active">
-            Shows<span id="showsCounter"></span>
+          <li class="list-group-item active ms-3">
+            Shows (<span id="showsCounter"></span>)
           </li>
           <li class="list-group-item ms-3">Movies</li>
           <li class="list-group-item ms-3">Documentaries</li>
