--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -1,7 +1,5 @@
-:root {
-  --font: 'Montserrat', sans-serif;
-}
-
 body {
   font-family: var(--font);
+  background-color: var(--dark-gray);
+  color: var(--off-white);
 }
