Update/Remove - Update website -title- / Remove Bootstrap class on -section-

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>Test</title>
+    <title>TVMaze</title>
   </head>
 
   <body>
@@ -54,7 +54,7 @@
         aria-hidden="true"
         data-modal-holder
       ></div>
-      <section class="py-5 bg-body-tertiary">
+      <section class="py-5">
         <div class="container">
           <div
             class="shows-container container d-flex flex-wrap align-items-center justify-content-around"
