Add 'cards.css' -styles/stylesheet- -file- and import it to 'index.css'.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,4 +3,6 @@
 @import 'base/base.css';
 @import 'components/navbar/navbar.css';
 @import 'components/modals/show-modal.css';
+@import 'components/cards/cards.css';
+@import 'components/footer/footer.css';
 @import 'UX/modal.css';
