Removed bootstrap classes from footer and header

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,8 +25,8 @@
   </head>
 
   <body>
-    <header class="container">
-      <nav class="navbar justify-content-start">
+    <header>
+      <nav class="navbar container">
         <a class="navbar-brand" href="index.html">
           <img
             id="navbar-logo"
@@ -63,24 +63,22 @@
       </section>
     </main>
 
-    <footer class="footer mt-auto py-3 bg-body-tertiary">
+    <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-body-secondary"
-          ><i class="fa-regular fa-copyright"></i> Created by
+        <span>
+          <i class="fa-regular fa-copyright"></i> Created by
           <a
             href="https://github.com/ITurres"
             target="_blank"
             rel="noopener noreferrer"
-            class="text-decoration-none"
           >
             <i class="fa-brands fa-github m-1"></i>ITurres
           </a>
-          &
+          <span class="dark-gray">&</span>
           <a
             href="https://github.com/Ruthmy"
             target="_blank"
             rel="noopener noreferrer"
-            class="text-decoration-none"
           >
             <i class="fa-brands fa-github m-1"></i>Ruthmy
           </a>
