Update classes on 'main' -element- and childrens on 'index.html' -file-

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,16 +54,19 @@
         aria-hidden="true"
         data-modal-holder
       ></div>
-      <section class="py-5">
-        <div class="container">
+      <section class="shows-section py-5">
+        <div class="container shows-container">
           <div
-            class="shows-container container d-flex flex-wrap align-items-center justify-content-around"
-          ></div>
+            id="shows-holder"
+            class="shows-gallery container d-flex align-items-center justify-content-around"
+          >
+            <!--! shows will be auto injected -->
+          </div>
         </div>
       </section>
     </main>
 
-    <footer class="footer mt-auto py-3">
+    <footer class="footer mt-auto py-4">
       <div class="container">
         <span>
           <i class="fa-regular fa-copyright"></i> Created by
