Added new classes and markup on 'navbar' -element-

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,10 +36,16 @@
         </a>
         <ul class="nav">
           <li class="list-group-item active ms-3">
-            Shows (<span id="showsCounter"></span>)
+            <a href="#" class="navbar__link">
+              Shows (<span id="showsCounter"></span>)
+            </a>
           </li>
-          <li class="list-group-item ms-3">Movies</li>
-          <li class="list-group-item ms-3">Documentaries</li>
+          <li class="list-group-item ms-3">
+            <a href="#" class="navbar__link">Movies</a>
+          </li>
+          <li class="list-group-item ms-3">
+            <a href="#" class="navbar__link">Documentaries</a>
+          </li>
         </ul>
       </nav>
     </header>
