--- a/src/styles/components/navbar/navbar.css
+++ b/src/styles/components/navbar/navbar.css
@@ -2,6 +2,16 @@
   max-width: 150px;
 }
 
+.navbar__link {
+  text-decoration: none;
+  color: var(--white);
+  transition: color 0.2s ease-in-out;
+}
+
+.navbar__link:hover {
+  color: var(--bright-red);
+}
+
 header {
   background-color: var(--off-black);
 }
@@ -14,5 +24,10 @@ nav.navbar {
   nav.navbar {
     flex-direction: column;
     justify-content: center;
+    gap: 0.5rem;
+  }
+
+  .navbar-brand {
+    margin: 0;
   }
 }
