--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,5 +4,6 @@
 @import 'components/navbar/navbar.css';
 @import 'components/modals/show-modal.css';
 @import 'components/cards/cards.css';
+@import 'layout/shows-section.css';
 @import 'components/footer/footer.css';
 @import 'UX/modal.css';
