--- a/src/styles/components/footer/footer.css
+++ b/src/styles/components/footer/footer.css
@@ -15,3 +15,9 @@ footer.footer a:hover {
 footer.footer .dark-gray {
   color: gray;
 }
+
+@media (max-width: 576px) {
+  footer.footer {
+    text-align: center;
+  }
+}
