Added overrider for {min-height} on breakpoint for 'shows-section'

--- a/src/styles/layout/shows-section.css
+++ b/src/styles/layout/shows-section.css
@@ -30,6 +30,7 @@
 
   .shows-section {
     height: calc(100vh - (105px + 73px));
+    min-height: auto;
 
     /* ?  100vh - (navbar height + footer height) */
   }
