Remove 'py-5' Bootstrap class from 'index.html'

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -60,7 +60,7 @@
         aria-hidden="true"
         data-modal-holder
       ></div>
-      <section class="shows-section py-5">
+      <section class="shows-section">
         <div class="container shows-container">
           <div
             id="shows-holder"
