Update and Add new styles to 'shows-section.css' -stylesheet-

--- a/src/styles/layout/shows-section.css
+++ b/src/styles/layout/shows-section.css
@@ -7,6 +7,8 @@
   min-height: calc(100vh - (73px + 73px));
 
   /* ?  100vh - (navbar height + footer height) */
+
+  padding: 3.5rem 0;
 }
 
 @media (max-width: 576px) {
@@ -33,10 +35,13 @@
     min-height: auto;
 
     /* ?  100vh - (navbar height + footer height) */
+
+    padding: 1rem 0;
   }
 
   .shows-gallery {
     width: auto;
     flex-wrap: nowrap;
+    overflow-y: clip;
   }
 }
