--- a/src/styles/components/modals/show-modal.css
+++ b/src/styles/components/modals/show-modal.css
@@ -4,6 +4,18 @@
 
 .modal-header {
   border-bottom: none;
+  padding: 1rem 1rem 0.1rem 1rem;
+}
+
+.modal::-webkit-scrollbar {
+  width: 0.7rem;
+  border-radius: 1rem;
+  background-color: var(--dark-gray);
+}
+
+.modal::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background: linear-gradient(to top, var(--darker-red), var(--bright-red));
 }
 
 button.close-modal {
@@ -70,11 +82,10 @@ button.close-modal:hover {
 }
 
 .btn-primary:active {
-  /* background-color: var(--off-black);
+  background-color: var(--off-black);
   border: 2px solid var(--bright-red);
   color: var(--bright-red);
-  font-weight: 900; */
-  background-color: aqua;
+  font-weight: 900;
 }
 
 /* ? Bootstrap Overrides */
@@ -87,4 +98,19 @@ button.close-modal:hover {
   background-color: var(--bright-red);
   border: 2px solid var(--dark-gray);
   color: var(--off-white);
+}
+
+.zoom-animation {
+  -webkit-animation: animatezoom 0.6s ease-in-out 0s;
+  animation: animatezoom 0.6s ease-in-out 0s;
+}
+
+@media (max-width: 400px) {
+  .modal-body {
+    flex-direction: column;
+  }
+
+  .modal-body img {
+    max-width: 220px;
+  }
 }
